添加前端和聊天功能

--- a/src/main/resources/static/ckfinder/_samples/ckeditor.html
+++ b/src/main/resources/static/ckfinder/_samples/ckeditor.html
@@ -43,7 +43,7 @@
 	<script>
 		// Note: in this sample we use CKEditor with two extra plugins:
 		// - uploadimage to support pasting and dragging images,
-		// - image2 (instead of image) to provide images with captions.
+		// - image2 (instead of images) to provide images with captions.
 		// Additionally, the CSS style for the editing area has been slightly modified to provide responsive images during editing.
 		// All these modifications are not required by CKFinder, they just provide better user experience.
 		if ( typeof CKEDITOR !== 'undefined' ) {
